# STimer

./: .editorconfig  .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  ReadMe.md  STimer.cpp  STimer.cppcheck  STimer.hpp  STimer.props  STimer.sln  STimer.vcxproj  System.cpp  System.hpp
.github/workflows/: clang.yml  cppcheck.yml  gcc.yml
STimer/: MainWindow.cpp  MainWindow.hpp  STimer.cpp  STimer.rc  STimer.vcxproj  System.cpp  System.hpp
res/: Resources.h  STimer.rc  STimer.xpm
src/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  PCH.hpp  STimer.cpp  STimer.hpp  System.cpp  System.hpp
